# Antropse

./: .gitignore  AntropseTests.cpp  AntropseTests.cpp.backup  AntropseUtils.cpp  AntropseUtils.h  Bus.cpp  Bus.h  CMakeLists.txt  CMakeLists.txt.save  CONST.h  Car.cpp  Car.h  Convert.cpp  Convert.h  GraphicImpressionExporter.cpp  GraphicImpressionExporter.h  Intersection.cpp  Intersection.h  MotorBike.cpp  MotorBike.h  NetworkDomainTests.cpp  NetworkExporter.cpp  NetworkExporter.h  NetworkExporterTests.cpp  NetworkImporter.cpp  NetworkImporter.h  NetworkImporterTests.cpp  PSE.txt  References.txt  Road.cpp  Road.h  RoadNetwork.cpp  RoadNetwork.h  RoadNetworkExporter.cpp  RoadNetworkExporter.h  TrafficLight.cpp  TrafficLight.h  Truck.cpp  Truck.h  Vehicle.cpp  (+13 more)
Plan/: Opmerkingen PSE.txt  OpmerkingenNaEvaluatie.docx  OpmerkingenNaEvaluatie.txt  PSE.txt  verdeling.txt
doxygen/: input_file.dox  mainpage.h  references.dox
html/: AntropseTests_8cpp.html  AntropseTests_8cpp__incl.map  AntropseTests_8cpp__incl.md5  AntropseUtils_8cpp__incl.map  AntropseUtils_8cpp__incl.md5  AntropseUtils_8h__dep__incl.map  AntropseUtils_8h__dep__incl.md5  AntropseUtils_8h__incl.map  AntropseUtils_8h__incl.md5  AntropseUtils_8h_source.html  Bus_8cpp.html  Bus_8cpp__incl.map  Bus_8cpp__incl.md5  Bus_8h.html  Bus_8h__dep__incl.map  Bus_8h__dep__incl.md5  Bus_8h__incl.map  Bus_8h__incl.md5  Bus_8h_source.html  CONST_8h.html  CONST_8h__dep__incl.map  CONST_8h__dep__incl.md5  CONST_8h_source.html  Car_8cpp.html  Car_8cpp__incl.map  Car_8cpp__incl.md5  Car_8h.html  Car_8h__dep__incl.map  Car_8h__dep__incl.md5  Car_8h__incl.map  Car_8h__incl.md5  Car_8h_source.html  Convert_8cpp__incl.map  Convert_8cpp__incl.md5  Convert_8h.html  Convert_8h__dep__incl.map  Convert_8h__dep__incl.md5  Convert_8h_source.html  DesignByContract_8h__dep__incl.map  DesignByContract_8h__dep__incl.md5  (+189 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_4.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+38 more)
tests/: BusyDay.xml  FollowTheLeader.xml  NeedForSpeed.xml  RocketHigh.xml  SlowDown.xml  SmallStreets.xml  SomeoneFloating.xml  WayTooLow.xml
tests/domainTests/: DrivingClose.xml  GoingFastForward.xml  NeedForSpeed.xml  SlowDown.xml  SmallStreets.xml
tests/domainTests/output/expected/: errorLogImpossibleToStopTrafficLight.txt
tests/inputTests/: AlreadyUsedLicensePlate.xml  Bus.xml  BusStop.xml  BusStopDoubleAsPosition.xml  BusStopMissingRoad.xml  BusStopOffRoad.xml  BusStopOnNonExistentRoad.xml  BusyDay.xml  CarOffRoad.xml  DoubleAsSpeedLimit.xml  DoubleLicencePlate.xml  DoubleRoadName.xml  DrivingOnNonExistentRoad.xml  EmptyRoadName.xml  HtmlTagsInsideRoadName.xml  IncompleteCarInformation.xml  IncompleteRoadInformation.xml  IncompleteZone.xml  IncorrectRoadLength.xml  MotorBike.xml  NegativeSpeedLimit.xml  NoClosingRoot.xml  NoOpeningRoot.xml  NoPersonalSpace.xml  NoRoadSpecified.xml  RocketHigh.xml  SomeoneFloating.xml  StringAsSpeedLimit.xml  TrafficLight.xml  TrafficLightOffRoad.xml  TrafficLightOnUnknownRoad.xml  TrafficLightWithoutPosition.xml  UnknownConnection.xml  UnknownRoadAttribute.xml  UnknownRoadSign.xml  UnknownType.xml  UnknownVehicle.xml  VehicleEmptyType.xml  VehicleWithoutType.xml  Vrachtwagen.xml  (+3 more)
tests/inputTests/output/expected/: BusStopMissingRoad.txt  BusStopOffRoad.txt  BusStopOnNonExistentRoad.txt  CarOffRoad.txt  DoubleAsSpeedLimit.txt  DrivingOnNonExistentRoad.txt  RocketHigh.txt  (+10 more)
tests/outputTests/expected/: BusjeKomtZoGIE.txt  EmptyRoadNetwork.txt  EmptyRoadNetworkGIE.txt  FloatingPoints.txt  GreenTrafficLight.txt  GreenTrafficLightGIE.txt  MotorBike.txt  MultipleRoadsGIE.txt  OrangeTrafficLight.txt  OrangeTrafficLightGIE.txt  OutputGoingForward.txt  RedTrafficLight.txt  Truck.txt  TruckGIE.txt  ZoneTestGIE.txt
